# vanilla-parachain

./: Cargo.toml
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
