[package]
name = "parachain-template-node"
version = "0.7.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository.workspace = true
edition.workspace = true
build = "build.rs"
publish = false

[lints]
workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.195", features = ["derive"] }
jsonrpsee = { version = "0.20.3", features = ["server"] }
futures = "0.3.28"
serde_json = "1.0.111"

# Local
parachain-template-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { version = "28.0.0" }
frame-benchmarking-cli = { version = "32.0.0" }
pallet-transaction-payment-rpc = { version = "30.0.0" }
sc-basic-authorship = { version = "0.34.0" }
sc-chain-spec = { version = "27.0.0" }
sc-cli = { version = "0.36.0" }
sc-client-api = { version = "28.0.0" }
sc-offchain = { version = "29.0.0" }
sc-consensus = { version = "0.33.0" }
sc-executor = { version = "0.32.0" }
sc-network = { version = "0.34.0" }
sc-network-sync = { version = "0.33.0" }
sc-rpc = { version = "29.0.0" }
sc-service = { version = "0.35.0" }
sc-sysinfo = { version = "27.0.0" }
sc-telemetry = { version = "15.0.0" }
sc-tracing = { version = "28.0.0" }
sc-transaction-pool = { version = "28.0.0" }
sc-transaction-pool-api = { version = "28.0.0" }
sp-api = { version = "26.0.0" }
sp-block-builder = { version = "26.0.0" }
sp-blockchain = { version = "28.0.0" }
sp-consensus-aura = { version = "0.32.0" }
sp-core = { version = "28.0.0" }
sp-keystore = { version = "0.34.0" }
sp-io = { version = "30.0.0" }
sp-runtime = { version = "31.0.0" }
sp-timestamp = { version = "26.0.0" }
substrate-frame-rpc-system = { version = "28.0.0" }
substrate-prometheus-endpoint = { version = "0.17.0" }

# Polkadot
polkadot-cli = { version = "7.0.0" }
polkadot-primitives = { version = "7.0.0" }
xcm = { package = "staging-xcm", version = "7.0.0", default-features = false }

# Cumulus
cumulus-client-cli = { version = "0.7.0" }
cumulus-client-collator = { version = "0.7.0" }
cumulus-client-consensus-aura = { version = "0.7.0" }
cumulus-client-consensus-common = { version = "0.7.0" }
cumulus-client-consensus-proposer = { version = "0.7.0" }
cumulus-client-service = { version = "0.7.0" }
cumulus-primitives-core = { version = "0.7.0" }
cumulus-primitives-parachain-inherent = { version = "0.7.0" }
cumulus-relay-chain-interface = { version = "0.7.0" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"parachain-template-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
