[package]
name = "pallet-parachain-template"
authors = ["Anonymous"]
description = "FRAME pallet template for defining custom runtime logic."
version = "0.7.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { version = "29.0.0", default-features = false, optional = true}
frame-support = { version = "29.0.0", default-features = false}
frame-system = { version = "29.0.0", default-features = false}

[dev-dependencies]
serde = { version = "1.0.195" }

# Substrate
sp-core = { version = "28.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false}
sp-runtime = { version = "32.0.0", default-features = false}

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	# "sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
